--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>INPROLIB - Login</title>
-  <link rel="stylesheet" href="cadastro_login.css">
-  <link rel="stylesheet" href="notifications.css?v=1">
+  <link rel="stylesheet" href="cadastro_login.css?v=3">
+   <link rel="stylesheet" href="notifications.css?v=1">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
