--- a/templates/publicacao.html
+++ b/templates/publicacao.html
@@ -155,8 +155,15 @@
                 {% endif %}
               </select>
               
-              <label for="portaria">Portaria de Autorização</label>
-              <input type="text" id="portaria" placeholder="Insira o número da portaria">
+              <label for="orientador">Orientado/Professor</label>
+              <select id="orientador" name="orientador" required>
+                <option value="">Selecione o orientado/professor</option>
+                {% if professores %}
+                  {% for p in professores %}
+                    <option value="{{ p.id_usuario }}">{{ p.nome }}</option>
+                  {% endfor %}
+                {% endif %}
+              </select>
 
               <label for="captcha">Captcha: {{ captcha_question }}</label>
               <input type="text" id="captcha" name="captcha" placeholder="Digite o resultado" required>
